--- a/src/components/filter/filters.module.scss
+++ b/src/components/filter/filters.module.scss
@@ -4,8 +4,9 @@
 .form {
   display: flex;
   gap: 1rem;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 @mixin input {
@@ -19,17 +20,27 @@
   background-color: rgba($card-color, 0.5);
   @include input();
   .option {
-    background: rgba($card-color, 0.5);
+    background: ($card-color);
     padding: 0.5rem;
   }
 }
 
 .input {
   @include input();
+  color: $bg-color;
 }
+.inputRadio {
+  accent-color: $acent-color;
+}
+
 .btn {
   background-color: $acent-color;
-
   cursor: pointer;
   @include input();
+  &:hover {
+    filter: opacity(0.5);
+  }
+  &:active {
+    filter: opacity(1);
+  }
 }
